[workspace]
package.edition = "2024"
package.version = "0.2.1"
resolver = "2"
members = [
  "packages/ioc_container_rs",
  "packages/example",
  "packages/tests",
  "packages/benchmarks",
]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync"] }
async-trait = "0.1.88"
